--- a/InterestCalculator.html
+++ b/InterestCalculator.html
@@ -2,48 +2,61 @@
 
 <head>
 
-<h1>Interest Calculator</h1>
+<style>
+.myDiv {
+  border: 15px outset red;
+  background-color: lightblue;
+  text-align: center;
+}
+</style>
 
 </head>
-<body>
 
-	<form id="frm1">
+<body class="myDiv">
+<div class="myDiv">
+<h1>Interest Calculator</h1>
+	Enter Amount you want to lend:
+	<input type="text" id="amountolend">
+	<br>
+	<br> Please Enter The Loan Term In Months:
+	<input type="text" id="loanTerm">
+	<br>
+	<br> Enter percentage:
+	<input type="text" id="loanPercentage">
+	<br>
+	<br>
+	<input type="button" onclick="myFunction()" value="Submit">
 
-		Enter Amount you want to lend: <input type="text" id="amountolend"><br>
-
-		Please Enter The Loan Term In Months: <input type="text" id="loanTerm"><br>
-
-		Enter percentage: <input type="text" id="loanPercentage"><br>
-
-		<input type="button" onclick="myFunction()" value="Submit">
-
-	</form>
-<p id="demo">hi</p>
-	<script>
-		function myFunction() {
-			console.log("Sai clicked on submit");
-			var totalAmountToLend = document.getElementById("amountolend").value;
-			var loanTerm = document.getElementById("loanTerm").value;
-			var loanPercentage = document.getElementById("loanPercentage").value;
-			var finalLoanTerm = parseFloat(loanTerm) + 1;
-			var monthlyPrinciplePayment = totalAmountToLend / loanTerm;
-			var totalMonthlyPayment;
-			
-			for (var i = 0; i < finalLoanTerm; i++) {
-				var remainingAmount = (totalAmountToLend - monthlyPrinciplePayment
-						* i);
-				var newTotalAmount = remainingAmount;
-				var interestAmountPerMonth = (remainingAmount * loanPercentage) / 100;
-				var totalMonthlyPayment = interestAmountPerMonth
-						+ monthlyPrinciplePayment;
-				console.log(totalMonthlyPayment)
-				
-			}
-			return totalMonthlyPayment;
-			document.getElementById("frm1").submit();
-		}
-		document.getElementById("demo").innerHTML = myFunction();
-	</script>
 	
+</div>
+<h1>Your Monthly Payments Are:</h1>
+<div id="mySpanId">
+	</div>
 </body>
 </html>
+
+
+<script>
+	function myFunction() {
+		console.log("Sai clicked on submit");
+		var totalAmountToLend = document.getElementById("amountolend").value;
+		var loanTerm = document.getElementById("loanTerm").value;
+		var loanPercentage = document.getElementById("loanPercentage").value;
+		var finalLoanTerm = parseFloat(loanTerm) + 1;
+		var monthlyPrincipalPayment = totalAmountToLend / loanTerm;
+		var totalMonthlyPayment;
+		let monthlyPayments = [];
+		for (var i = 0; i < finalLoanTerm; i++) {
+			var remainingAmount = (totalAmountToLend - monthlyPrincipalPayment
+					* i);
+			var newTotalAmount = remainingAmount;
+			var interestAmountPerMonth = (remainingAmount * loanPercentage) / 100;
+			var totalMonthlyPayment = interestAmountPerMonth
+					+ monthlyPrincipalPayment;
+			monthlyPayments.push("Month Number " + i +" = "+totalMonthlyPayment);
+		}
+		console.log(monthlyPayments);
+		document.getElementById("mySpanId").innerHTML = monthlyPayments;
+		return monthlyPayments;
+	}
+</script>
